fix:changed field Array layout

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,9 @@ label.required::after {
     margin-left: 4px;
     color: red;
   }
+  input[type="checkbox"]{
+    
+    width: 25px; 
+  height: 25px;
+
+  }
